src/test/deca/context/invalid/provided/opcomp_sur_bool.deca
//Resultats :
//Erreur contextuelle
//Ligne 4 : only applied to ints & floats
{boolean f = true < false;}
